[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameActions/ViewIntelPackages/UI/ViewIntelPackagesUI.gd" type="Script" id=1]

[node name="ViewIntelPackagesUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="IntelligencePackageList" type="ItemList" parent="."]
margin_left = 30.0
margin_top = 33.0
margin_right = 200.0
margin_bottom = 413.0

[node name="DeletePackageButton" type="Button" parent="."]
margin_left = 30.0
margin_top = 422.0
margin_right = 200.0
margin_bottom = 442.0
disabled = true
text = "Delete Package"

[connection signal="item_selected" from="IntelligencePackageList" to="." method="_on_IntelligencePackageList_item_selected"]
